@@ -21,41 +21,57 @@ import javax.crypto.BadPaddingException;
 import java.util.concurrent.*;
 import java.util.concurrent.locks.*;
 
-public class ServerFile{
+public class ServerFile implements Comparable<ServerFile>{
 	private String id;
 	private String encryptedId;
 	private String pathName;
 	private long lastModified;
 	//private FileTime creationDate;
 	private int replicationDeg;
+	private int initPeerId;
 	private ArrayList<ArrayList<Integer>> chunksRepDeg;
 	
-	public ServerFile(String fileName, int replicationDeg, long lastModified, SecretKeySpec secretKey){
+	public ServerFile(String fileName, int replicationDeg, long lastModified, SecretKeySpec secretKey, int peerId){
 		this.pathName = ServerFile.toPathName(fileName);
 		this.id = ServerFile.toId(fileName);
 		this.encryptedId = ServerFile.toEncryptedId(fileName, secretKey);
 		this.lastModified = lastModified;
 		//this.readCreationDate();
 		this.replicationDeg = replicationDeg;
+		this.initPeerId = peerId;
 		this.chunksRepDeg = new ArrayList<ArrayList<Integer>>();
 	}
 	
-	public ServerFile(String fileId, String encryptedFileID, String pathName, long lastModified, int replicationDeg){
+	public ServerFile(String fileId, String encryptedFileID, String pathName, long lastModified, int replicationDeg, int peerId){
 		this.id = fileId;
 		this.encryptedId = encryptedFileID; 
 		this.pathName = pathName;
 		this.lastModified = lastModified;
 		//this.readCreationDate();
 		this.replicationDeg = replicationDeg;
+		this.initPeerId = peerId;
 		this.chunksRepDeg = new ArrayList<ArrayList<Integer>>();
 	}
+
+
+	public ServerFile(ServerFile file){
+		this.id = file.getId();
+		this.encryptedId = file.getEncryptedId(); 
+		this.pathName = file.getPathName();
+		this.lastModified = file.getLastModifiedDate();
+		//this.readCreationDate();
+		this.replicationDeg = file.getReplicationDeg();
+		this.initPeerId = file.getInitPeerId();
+		this.chunksRepDeg =  new ArrayList<ArrayList<Integer>>();
+	}
+
 	/*
 	public void readCreationDate(){
 		Path file = Paths.get(this.pathName);
 		try{
 			BasicFileAttributes attr = Files.getFileAttributeView(file,BasicFileAttributeView.class).readAttributes();
 			this.creationDate = attr.creationTime();
-			System.out.println("Creation Time: "+this.creationDate);
+			//System.out.println("Creation Time: "+this.creationDate);
 		}
 		catch(Exception e){
 			this.creationDate = null;
@@ -73,6 +89,14 @@ public class ServerFile{
 
 	public String getEncryptedId() {
 		return this.encryptedId;
+	}
+
+	public long getLastModifiedDate() {
+		return this.lastModified;
+	}
+
+	public String getLastModifiedDateStr() {
+		return FileTime.fromMillis(this.lastModified).toString();
 	}
 	
 	public static String toRelativeName(String fileName){
@@ -127,9 +151,29 @@ public class ServerFile{
 		return null;
 		
 	}
+
+	public boolean testKey(SecretKeySpec secretKey){
+
+		try {
+			Cipher cipher = Cipher.getInstance("AES/ECB/PKCS5Padding");
+			cipher.init(Cipher.DECRYPT_MODE, secretKey);
+			cipher.doFinal(this.encryptedId.getBytes());
+			return true;
+			
+		}
+		catch(NoSuchAlgorithmException | InvalidKeyException | IllegalBlockSizeException | NoSuchPaddingException | BadPaddingException e){
+			System.err.println("Error decrypting file "+this.pathName);
+		}
+
+		return false;
+	}
 	
 	public int getReplicationDeg(){
 		return this.replicationDeg;
+	}
+	
+	public int getInitPeerId(){
+		return this.initPeerId;
 	}
 
 	public ArrayList<ArrayList<Integer>> getChunksRepDeg(){
@@ -146,8 +190,11 @@ public class ServerFile{
 	}
 
 	public boolean decChunksRepDeg(int chunkNr, int peerId){
+		if(this.chunksRepDeg.size() == 0)
+			return false;
+		
 		ArrayList<Integer> peers = this.chunksRepDeg.get(chunkNr);
-		peers.remove(new Integer(peerId));
+		peers.remove(Integer.valueOf(peerId));
 		return peers.size() < this.replicationDeg;
 	}
 	
@@ -155,14 +202,40 @@ public class ServerFile{
 
 		File file = new File(this.pathName);
 
-		return this.encryptedId + " " + this.id+" "+this.pathName+" "+this.lastModified;
+		return this.encryptedId + " " + this.id+" "+this.pathName+" "+this.lastModified+" "+this.initPeerId;
 	}
 	
+
+	public String toList(){
+		String lineSep = System.lineSeparator();
+		return  "	Name: "+ServerFile.toRelativeName(this.pathName)+lineSep+
+				"	Path: "+this.pathName+lineSep+
+				"	Last Modified: "+this.getLastModifiedDateStr();
+				
+	}
+
+  	@Override
 	public String toString(){
 		String lineSep = System.lineSeparator();
 		return  "	PathName: "+this.pathName+lineSep+
 				"	ID: "+this.id+lineSep+
+				"	InitPeer: "+this.initPeerId+lineSep+
 				"	Expected replication degree: "+this.replicationDeg+lineSep+
 				"	Current chunks replication degree: "+ this.chunksRepDeg.stream().map(peers -> Integer.toString(peers.size())).collect(Collectors.joining(", "));
 	}
+
+	@Override
+  	public int compareTo(ServerFile file) {
+  		String relativeName = ServerFile.toRelativeName(this.pathName);
+  		String compRelativeName = ServerFile.toRelativeName(file.getPathName());
+   	 	int comp = relativeName.compareTo(compRelativeName);
+   	 	if(comp == 0){
+   	 		comp = this.pathName.compareTo(file.getPathName());
+   	 		if(comp == 0){
+   	 			comp = Long.compare(this.lastModified, file.getLastModifiedDate());
+   	 		}
+   	 	}
+   	 	
+   	 	return comp;
+  	}
 }
